:sparkles: [develop] Fix cards layout to align with the header

--- a/assets/css/variables/_layout.scss
+++ b/assets/css/variables/_layout.scss
@@ -10,4 +10,4 @@ $pad-desktop-l: 48px;
 //
 $grid-gap: 1rem;
 
-$header-padding: 2rem;
+$header-padding: 1.875rem;
